--- a/css/index.css
+++ b/css/index.css
@@ -123,3 +123,8 @@ footer p a:hover{ text-decoration:underline}
 /*topnav*/
 .topnav{ line-height:50px; height:50px; color:#000; text-align:center; background:#FFF; position:fixed; width:100%; top:0; z-index:999; box-shadow:#333 0px 2px 2px}
 .topnav a{ color:#000; font-weight:bold; margin:0 5px}
+div.flower img{
+	width: 110px;
+	margin-left: 30px;
+	margin-top: 26px;
+}
