--- a/css/index.css
+++ b/css/index.css
@@ -128,3 +128,8 @@ div.flower img{
 	margin-left: 30px;
 	margin-top: 26px;
 }
+div.blog img{
+	width: 300px;
+	height: 256px;
+	border:1px solid #eee;
+}
