--- a/css/index.css
+++ b/css/index.css
@@ -15,7 +15,7 @@ header { width: 100%; margin: auto; border-bottom: #3c7a48 1px solid }
 .flower img { margin: 22px 0 0 17px; display: block; }
 /* nav */
 #nav { width: 100%; line-height: 50px; height: 50px; font-family: "Î¢ÈíÑÅºÚ"; font-size: 16px; background: rgba(56,134,72,.8); text-align: center; position: relative; border-bottom: #559765 1px solid }
-#nav ul { width: 1000px; margin: auto; background: url(../images/heart.png) left no-repeat; overflow: hidden }
+#nav ul { width: 1000px; margin: auto;overflow: hidden }
 #nav ul li { display: inline; margin: 0 12px; text-align: center; }
 #nav ul li a { color: #fff; }
 /* photowall */
